<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CallMeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="callMeBtn">Chiamami</string>
    <string name="testBtn">Test</string>
    <string name="menuBtn">Menu contestuale</string>
    <string name="subMenuBtn">Submenu...</string>
    <string name="alertBtn">Clicca per vedere una semplice dialog...</string>
    <string name="progressBtn">Progress bar demo.</string>
    <string name="progressCustomBtn">Progress bar custom demo.</string>
    <string name="fileSystemBtn">File I/O - blocco note demo.</string>
    <string name="fileSystemExternalBtn">Lettura immagini da SDCARD e galleria con adapter demo.</string>
    <string name="browserBtn">Apri un mini browser web e memorizza la history in un database SQLite.</string>
    <string name="contentProviderBtn">Apri una activity che interroga il content provider della RUBRICA.</string>
    <string name="contentProviderMediaStoreBtn">Apri una activity che interroga il content provider delle IMMAGINI.</string>
    <string name="serviceBtn">Apri una activity che permette di gestire il ciclo di vita di un servizio personalizzato.</string>

    <!-- Activity CallMe Messaggi -->
    <string name="callMe.option1">Comando 1</string>
    <string name="callMe.option2">Comando 2</string>
    <string name="callMe.option3">Comando 3</string>

    <!-- Activity SimulateCall -->
    <string name="simulateCall.msg">Ora ti chiamo...</string>
    <string name="simulateCall.back">Back simulate</string>

    <!-- Activity SubMenu -->
    <string name="subMenu.text">Premere il tasto back...</string>
    <string name="subMenu.title">SubMenuDemo</string>

    <!-- Activity Test -->
    <string name="test.msg">Ora ti chiamo...</string>
    <string name="test.back">Back test</string>

    <!-- Activity Progress -->
    <string name="progress.msg">Lanciamo una cosa in background</string>
    <string name="progress.back">Start a long operation...</string>
    <string name="progress.title">Progress bar demo</string>

    <!-- Activity Progress Custom -->
    <string name="progressCustom.msg">Lanciamo una cosa in background</string>
    <string name="progressCustom.back">Start a long operation...</string>
    <string name="progressCustom.title">Progress bar custom demo</string>

    <!-- Activity File System -->
    <string name="fileSystem.msg">Demo accesso al file system</string>
    <string name="fileSystem.load">Leggi da file</string>
    <string name="fileSystem.save">Scrivi file</string>
    <string name="fileSystem.list">Lista file</string>
    <string name="fileSystem.title">Demo accesso al file system</string>

    <!-- Activity Browser -->
    <string name="browser.title">Titolo del browser</string>
    <string name="browser.openURL">>></string>
    <string name="browser.openHistory">History</string>
    <string name="browser.menu.title">History</string>

    <!-- Activity ContentProvider -->
    <string name="contentProvider.title">Content Provider</string>
    <string name="contentProvider.message">Activity che interroga il content provider della rubrica</string>

    <!-- Activity ContentProviderMediaStore -->
    <string name="contentProviderMediaStore.title">Titolo media store content provider</string>

    <!-- Activity Service -->
    <string name="service.title">Service manager</string>
    <string name="service.startBtn.text">Start service</string>
    <string name="service.stopBtn.text">Stop service</string>
    <string name="service.editText.text">Stop service</string>

    <style name="simulateCallStyle1">
        <item name="android:textStyle">bold|italic</item>
        <item name="android:textColor">#00FF00</item>
        <item name="android:textSize">20sp</item>
        <item name="android:typeface">monospace</item>
        <item name="android:padding">10dp</item>
    </style>

    <style name="simulateCallStyle1.PiccoloCentrato">
        <item name="android:textSize">16sp</item>
        <item name="android:gravity">center</item>
    </style>

    <string name="title_activity_progress_custom">ProgressCustomActivity</string>
    <string name="title_activity_file_system">FileSystemActivity</string>
    <string name="title_activity_file_system_gallery">FileSystemGalleryActivity</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="title_activity_content_provider">ContentProviderActivity</string>
    <string name="title_activity_conte_provider_media_store">ConteProviderMediaStoreActivity</string>
    <string name="title_activity_service">ServiceActivity</string>

</resources>