<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
    	android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center_vertical"
	    tools:context=".CallMeActivity">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:orientation="vertical">
		<Button 
		    android:gravity="left" 
		    android:layout_marginTop="60dp"  
		    android:text="@string/callMeBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/call_me_callMeBtn"
		    />
		<Button 
		    android:gravity="left" 
		    android:text="@string/testBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/call_me_testBtn"/>
		<Button 
		    android:gravity="left" 
		    android:text="@string/menuBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/call_me_menuBtn"/>
		<Button 
		    android:gravity="left" 
		    android:text="@string/subMenuBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/call_me_subMenuBtn"/>
		<Button 
		    android:gravity="left" 
		    android:text="@string/alertBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/call_me_alertBtn"/>
		<Button 
		    android:gravity="left" 
		    android:text="@string/progressBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/call_me_progressBtn"/>
		<Button 
		    android:gravity="left" 
		    android:text="@string/progressCustomBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/call_me_progressCustomBtn"/>
		<Button 
		    android:gravity="left" 
		    android:text="@string/fileSystemBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
 		    android:id="@+id/call_me_fileSystemBtn"/>
		<Button 
		    android:gravity="left" 
		    android:text="@string/fileSystemExternalBtn"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
 		    android:id="@+id/call_me_fileSystemExternalBtn"/>
	</LinearLayout>
</ScrollView>